# jami-client-gnome

./: .gitignore  .gitmodules  .gitreview  .packer.json  .packer.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  README  README.md  cx.ring.gnome-ring.appdata.xml  cx.ring.gnome-ring.desktop.in  cx.ring.gnome-ring.service.in  gnome-ring.appdata.xml  gnome-ring.desktop  gnome-ring.desktop.autostart  gnome-ring.desktop.autostart.in  gnome-ring.desktop.in  groups  jami-gnome.appdata.xml  jami-gnome.desktop  jami-gnome.desktop.autostart  project.config  ring-gnome.appdata.xml  ring-gnome.desktop  ring-gnome.desktop.autostart  ring-gnome.spec  temp  version.txt
.gitlab/issue_templates/: Bug.md
.tx/: config
build-local/: CMakeCache.txt  Makefile  ar.gmo  bg.gmo  ca.gmo  cmake_install.cmake  cmake_uninstall.cmake  config.h  cs_CZ.gmo  da_DK.gmo  de.gmo  de_DE.gmo  el.gmo  en_GB.gmo  eo.gmo  es.gmo  et_EE.gmo  fa_IR.gmo  fi.gmo  fr.gmo  fr_CA.gmo  fr_FR.gmo  gschemas.compiled  he.gmo  hi_IN.gmo  hr.gmo  hu.gmo  id.gmo  install_manifest.txt  it.gmo  it_IT.gmo  ja.gmo  lt.gmo  ms.gmo  nb.gmo  nl.gmo  nl_NL.gmo  pa.gmo  pl.gmo  pt.gmo  (+13 more)
build-local/pixmaps/: pixmaps.gresource.c
build-local/ui/: ui.gresource.c
build-local/web/: web.gresource.c
cmake/: FindLibRingClient.cmake  GResources.cmake  GSettings.cmake  GitRevision.cmake  Uninstall.cmake.in  cmake_uninstall.cmake.in  compile-schemas.cmake
data/: cx.ring.RingGnome.gschema.xml  net.jami.Jami.gschema.xml  net.jami.client.gnome.gschema.xml
debian/: changelog  control  copyright  menu  rules
doc/: Doxyfile.in  gnome-ring.1  jami-gnome.1  ring-gnome.1
docker/debian_8/: Dockerfile
docker/debian_8_i386/: Dockerfile
docker/debian_9/: Dockerfile
docker/debian_9_i386/: Dockerfile
docker/fedora_21/: Dockerfile
docker/fedora_21_i386/: Dockerfile
docker/fedora_22/: Dockerfile
docker/fedora_22_i386/: Dockerfile
docker/fedora_23/: Dockerfile
docker/fedora_23_i386/: Dockerfile
docker/fedora_24/: Dockerfile
docker/fedora_24_i386/: Dockerfile
docker/trisquel_belenos/: Dockerfile
docker/ubuntu_14.04/: Dockerfile
docker/ubuntu_14.04_i386/: Dockerfile
docker/ubuntu_14.10/: Dockerfile
docker/ubuntu_14.10_i386/: Dockerfile
docker/ubuntu_15.04/: Dockerfile
docker/ubuntu_15.04_i386/: Dockerfile
docker/ubuntu_15.10/: Dockerfile
docker/ubuntu_15.10_i386/: Dockerfile
docker/ubuntu_16.04/: Dockerfile
docker/ubuntu_16.04_i386/: Dockerfile
pixmaps/: LICENSE  pixmaps.gresource.xml
po/: POTFILES.in  README  ar.po  ar_EG.po  az.po  be.po  be@tarask.po  be_BY.po  bg.po  bg_BG.po  bn.po  ca.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  en_GB.po  eo.po  es.po  es_AR.po  es_CO.po  es_MX.po  et.po  et_EE.po  eu.po  fa.po  fa_IR.po  fi.po  fr.po  fr_BE.po  fr_CA.po  fr_CH.po  fr_FR.po  ga.po  gl.po  gu.po  he.po  hi.po  (+58 more)
po/chatview/: POTFILES.in  README  ar.po  bg.po  ca.po  cs_CZ.po  da.po  de.po  de_DE.po  el.po  eo.po  es.po  es_AR.po  eu.po  fa_IR.po  fi.po  fr.po  fr_BE.po  fr_CA.po  fr_CH.po  fr_FR.po  gl.po  he.po  hr.po  hu.po  id.po  ig.po  it.po  it_IT.po  ja.po  ko_KR.po  lt.po  ms.po  nb.po  nl.po  nl_BE.po  nl_NL.po  oc.po  pa.po  pl.po  (+18 more)
po/fr/: ring-client-gnome.po
qrencode-3.4.4/: Makefile  bitstream.lo  config.h  config.h.in  config.status  libqrencode.la  libqrencode.pc  libtool  mask.lo  mmask.lo  mqrspec.lo  qrencode  qrencode.1  qrencode.lo  qrinput.lo  qrspec.lo  rscode.lo  split.lo
qrencode-3.4.4/.deps/: bitstream.Plo  mask.Plo  mmask.Plo  mqrspec.Plo  qrencode-qrenc.Po  qrencode.Plo  qrinput.Plo  qrspec.Plo  rscode.Plo  split.Plo
qrencode-3.4.4/.libs/: libqrencode.la  libqrencode.lai  libqrencode.so.3  libqrencode.so.3.4.4  qrencode
qrencode-3.4.4/tests/: Makefile
scripts/: build-chatview-locales.sh  generate_version.sh
sounds/: LICENSE  sounds.gresource.xml
src/: .accountview.cpp.swp  accountadddeviceview.cpp  accountadddeviceview.h  accountadvancedtab.cpp  accountadvancedtab.h  accountaudiotab.cpp  accountaudiotab.h  accountbanstab.cpp  accountbanstab.h  accountcertificatestab.cpp  accountcertificatestab.h  accountcontainer.cpp  accountcontainer.h  accountcreationwizard.cpp  accountcreationwizard.h  accountdevicestab.cpp  accountdevicestab.h  accountgeneraltab.cpp  accountgeneraltab.h  accountimportexportview.cpp  accountimportexportview.h  accountinfocontainer.h  accountinfopointer.h  accountmigrationview.cpp  accountmigrationview.h  accountsecuritytab.cpp  accountsecuritytab.h  accountvideotab.cpp  accountvideotab.h  accountview.cpp  accountview.h  avatarmanipulation.cpp  avatarmanipulation.h  bannedcontactsview.cpp  bannedcontactsview.h  callsview.cpp  callsview.h  cc-crop-area.c  chatview.cpp  chatview.h  (+107 more)
src/app/: accountcreationwizard.cpp  accountinfopointer.h  accountmigrationview.cpp  avatarmanipulation.h  cc-crop-area.c  chatview.h  conversationpopupmenu.h  conversationsview.cpp  conversationsview.h  currentcallview.h  incomingcallview.cpp  jami  (+14 more)
ui/: #accountgeneraltab.ui#  accountadddeviceview.ui  accountadvancedtab.ui  accountaudiotab.ui  accountbanstab.ui  accountcertificatestab.ui  accountcreationwizard.ui  accountdevicestab.ui  accountgeneraltab.ui  accountimportexportview.ui  accountmigrationview.ui  accountsecuritytab.ui  accountvideotab.ui  accountview.ui  avatarmanipulation.ui  chatview.html  chatview.ui  choosecontactdialog.ui  choosecontactview.ui  contactrequestcontentview.ui  createcontactdialog.ui  currentcallview.css  currentcallview.ui  editcontactdialog.ui  editcontactview.ui  generalsettingsview.ui  help-overlay.ui  incomingcallview.ui  incomingcallview.ui~  mainwindow.ui  mediaqualitymenu.ui  mediasettingsview.ui  messagingwidget.ui  newaccountsettingsview.ui  pluginsettingsview.ui  profile.ui  ringgearsmenu.ui  ringiconmenu.ui  ringmainwindow.ui  selfieview.ui  (+5 more)
web/: .eslintrc.json  README  chatview-gnome.css  chatview-windows.css  chatview.css  chatview.html  chatview.js  emoji.css  emoji.js  en.po  fa.css  fr.po  jed.js  linkify-html.js  linkify-jquery.js  linkify-string.js  linkify.js  qwebchannel.js  web.gresource.xml
(+57 files in other folders)
